--- a/Assets/styles.css
+++ b/Assets/styles.css
@@ -41,11 +41,11 @@ label {
 }
 
 body {
-  background-color: #f4f4f4;
+  background-color: #0c0b0b;
 }
 
 nav {
-  background-color: #333;
+  background-color: rgb(223, 86, 55);
   color: #fff;
   padding: 10px 20px;
   display: flex;
@@ -57,7 +57,7 @@ nav {
   max-width: 1200px;
   margin: 20px auto;
   padding: 20px;
-  background-color: #fff;
+  background-color: rgb(173, 206, 125);
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
@@ -79,7 +79,7 @@ nav {
 
 #searchButton {
   padding: 10px 20px;
-  background-color: #007BFF;
+  background-color: rgb(223, 86, 55);
   color: #fff;
   border: none;
   border-radius: 4px;
@@ -88,7 +88,7 @@ nav {
 }
 
 #searchButton:hover {
-  background-color: #0056b3;
+  background-color: rgb(244, 51, 8);
 }
 
 #preferencesContainer {
@@ -109,6 +109,20 @@ nav {
   margin-top: 20px;
   display: flex;
   justify-content: flex-start;
+}
+
+#ezBtn {
+padding: 10px 20px;
+  background-color: rgb(223, 86, 55);
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+#ezBtn:hover {
+    background-color: rgb(244, 51, 8);
 }
 
 #recipe-details {
@@ -133,4 +147,8 @@ nav {
     flex-direction: row;
     flex-wrap: wrap;
     width: 200px;
+}
+
+.strikethrough {
+    text-decoration: line-through;
 }
