--- a/Assets/styles.css
+++ b/Assets/styles.css
@@ -108,10 +108,12 @@ nav {
 .add-to-list-btn {
   margin-top: 20px;
   display: flex;
+  gap: 1rem;
+  flex-direction: column;
   justify-content: flex-start;
 }
 
-#ezBtn {
+#easyButton {
 padding: 10px 20px;
   background-color: rgb(223, 86, 55);
   color: #fff;
@@ -119,9 +121,24 @@ padding: 10px 20px;
   border-radius: 4px;
   cursor: pointer;
   transition: background-color 0.3s;
+  width: 300px;
 }
 
-#ezBtn:hover {
+#showList{
+  padding: 10px 20px;
+  background-color: rgb(223, 86, 55);
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  width: 300px;
+}
+#showList:hover {
+  background-color: rgb(244, 51, 8);
+}
+
+#easyButton:hover {
     background-color: rgb(244, 51, 8);
 }
 
