--- a/Assets/styles.css
+++ b/Assets/styles.css
@@ -1,33 +1,3 @@
-/* body {
-    background-color: rgb(173, 206, 125);
-}
-
-#ingImg {
-    width: 100%;
-
-}
-
-
-
-#recipe-list {
-    display: flex;
-    flex-flow: column wrap;
-}
-
-.ing-container {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: center;
-    flex-grow: 1;
-    width: 80%;
-
-#ingredientDetails {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-evenly;
-} */
-
 /* Resetting some default styles */
 body,
 h1,
@@ -77,7 +47,9 @@ nav {
   border-radius: 4px;
 }
 
-#searchButton {
+#searchButton,
+#easyButton,
+#showList {
   padding: 10px 20px;
   background-color: rgb(223, 86, 55);
   color: #fff;
@@ -85,9 +57,12 @@ nav {
   border-radius: 4px;
   cursor: pointer;
   transition: background-color 0.3s;
+  width: 300px;
 }
 
-#searchButton:hover {
+#searchButton:hover,
+#easyButton:hover,
+#showList:hover {
   background-color: rgb(244, 51, 8);
 }
 
@@ -113,63 +88,23 @@ nav {
   justify-content: flex-start;
 }
 
-#easyButton {
-padding: 10px 20px;
-  background-color: rgb(223, 86, 55);
-  color: #fff;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  transition: background-color 0.3s;
-  width: 300px;
-}
-
-#showList{
-  padding: 10px 20px;
-  background-color: rgb(223, 86, 55);
-  color: #fff;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  transition: background-color 0.3s;
-  width: 300px;
-}
-#showList:hover {
-  background-color: rgb(244, 51, 8);
-}
-
-#easyButton:hover {
-    background-color: rgb(244, 51, 8);
-}
-
-#recipe-details {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  gap: 20px;
-}
-
-#ingImg {
-    width: 100%;
-
-}
-.listItem:hover {
-cursor: pointer;
-}
-
-
 .img-wrapper {
-    width: 10rem; 
-    border: 1px blue solid;
+  width: 10rem;
+  border: 1px blue solid;
 }
 
 #recipe-view {
-    display: flex;
-    flex-grow: 1;
-    flex-direction: row;
-    flex-wrap: wrap;
-    width: 200px;
+  display: flex;
+  flex-grow: 1;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 200px;
+}
+
+.listItem:hover {
+  cursor: pointer;
 }
 
 .strikethrough {
-    text-decoration: line-through; 
+  text-decoration: line-through;
 }
