updated ingredient cards

--- a/Assets/styles.css
+++ b/Assets/styles.css
@@ -162,14 +162,27 @@ cursor: pointer;
     border: 1px blue solid;
 }
 
-#recipe-view {
-    display: flex;
-    flex-grow: 1;
-    flex-direction: row;
-    flex-wrap: wrap;
-    width: 200px;
-}
-
 .strikethrough {
     text-decoration: line-through; 
 }
+
+#recipe-view {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    flex-wrap: wrap;
+
+  }
+
+  .card {
+    margin: 10px;
+    width: 18rem;
+  }
+
+  .card-container {
+    display: flex;
+  }
+
+  .card-text {
+    color: red;
+  }
