--- a/Assets/styles.css
+++ b/Assets/styles.css
@@ -148,7 +148,7 @@ padding: 10px 20px;
   gap: 20px;
 }
 
-#ingImg {
+.ingImg {
     width: 100%;
 
 }
@@ -176,11 +176,14 @@ cursor: pointer;
 
   .card {
     margin: 10px;
-    width: 18rem;
+    padding: 1rem;
+    height: fit-content;
+    max-width: 18rem;
   }
 
   .card-container {
     display: flex;
+    flex-wrap: wrap;
   }
 
   .card-text {
