--- a/Assets/styles.css
+++ b/Assets/styles.css
@@ -179,6 +179,7 @@ cursor: pointer;
     padding: 1rem;
     height: fit-content;
     max-width: 18rem;
+    background-color: rgb(244, 51, 8);
   }
 
   .card-container {
@@ -187,5 +188,7 @@ cursor: pointer;
   }
 
   .card-text {
-    color: red;
+    color: rgb(10, 9, 9);
+    font-weight: bold;
+
   }
