--- a/Assets/styles.css
+++ b/Assets/styles.css
@@ -237,3 +237,12 @@ cursor: pointer;
     background-color:  rgb(223, 86, 55);
     padding: 1rem;
   }
+
+.weather-info {
+  margin-left: 1300px;
+}
+
+.Weather-icon {
+  width: 50px;
+  height: 50px;
+}
