--- a/Assets/styles.css
+++ b/Assets/styles.css
@@ -234,6 +234,10 @@ cursor: pointer;
   }
 
   .notification {
-    background-color:  rgb(223, 86, 55);
-    padding: 1rem;
+    background-color:  rgb(244, 51, 8);
+    color: white;
+    padding: .5rem;
+    border-radius: .5rem;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+
   }
