--- a/Assets/styles.css
+++ b/Assets/styles.css
@@ -234,6 +234,15 @@ cursor: pointer;
   }
 
   .notification {
+
+    background-color:  rgb(244, 51, 8);
+    color: white;
+    padding: .5rem;
+    border-radius: .5rem;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+
+  }
+
     background-color:  rgb(223, 86, 55);
     padding: 1rem;
   }
@@ -246,3 +255,4 @@ cursor: pointer;
   width: 50px;
   height: 50px;
 }
+
